files/examples/error/syntax_if_elif_el.t
def main(): 
int a, b
bool c,d
<%
Its if close has an error. Fix them to test next one
%>
    if a <= d: 
        puti(a)
    elif not c + 1:
        puti(b)
    elif d = "true":
        putb(c)
    elif 'a' = c:
        putb(c)
    else :
        putc('a')
    end 

end